--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,6 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+
+Jennifer Onwunali <jennynali09@gmail.com>
+Victor Chidi <victorblessed9@gmail.com>
